# kvcache-sim

./: .gitignore  ARCHITECTURE.md  PRODUCTION_READINESS.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
experiments/: __init__.py  network_variance.py  pd_experiments.py  plot.py  run_all.py
learned/: __init__.py  features.py  model.py  train.py
profiles/: h100_70b_reference.yaml
sim/: __init__.py  cache_manager.py  calibration.py  cluster.py  diagnostics.py  kv_transfer.py  metrics.py  network.py  pd_cluster.py  pd_metrics.py  pd_nodes.py  pd_router.py  policies.py  presets.py  radix_tree.py  reporting.py  router.py  storage.py
tests/: test_calibration.py  test_determinism.py  test_diagnostics.py  test_kv_transfer.py  test_pd_replay.py  test_presets.py  test_radix_tree.py  test_replay_online_learning.py  test_reporting.py  test_validation.py  test_workload.py
trace/: __init__.py  cluster_replay.py  generator.py  pd_replay.py  replay.py  validation.py  workload.py
