[project]
name = "kvcache-sim"
version = "0.1.0"
description = "Multi-tier KV cache hierarchical storage simulator for LLM inference"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "tabulate>=0.9",
]

[project.scripts]
kvcache-sim = "main:main"
